news scrollbar fix

--- a/public/src/left-side.sass
+++ b/public/src/left-side.sass
@@ -252,7 +252,7 @@
 			float: left
 			margin-left: 16px
 		#blog_container
-			height: 318px
+			height: 275px
 			float: left
 		ol#blog
 			list-style-type: none
